# govee

./: .gitignore  README.md  config.yml  pyproject.toml
docs/: GOVEE.md  SPEC.md
src/govee/: __init__.py  cli.py  commands.py  device.py
